tests/reference/asr-restriction_error_01-699a00b.stderr
semantic error: Both type variables must support addition operation
 --> tests/errors/restriction_error_01.py:6:12
  |
6 |     return x + y
  |            ^^^^^ 
